Complted shmapoo category
